<resources>
    <string name="app_name">Dash</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="slogan">"A Running App for finding events"</string>


    <string name="title_activity_sign_up">SignUp</string>

    <string name="passwordCriteria">Passwords must be between 5 and 14 characters. Password must include one or more number or special character.</string>
    <string name="PasswordTitle">Password Criteria</string>
    <string name="ok">ok</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dash Running</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_event">Events Near Me</string>
    <string name="menu_track">Track My Run</string>
    <string name="track">Track</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="defaultTime">00:00:00</string>
    <string name="Elevation">Net Elevation</string>
    <string name="distance">Distance</string>
    <string name="charDash">-</string>
    <string name="elavation">Elavation</string>
    <string name="my_profile_menu_title">My Profile</string>
    <string name="feature_coming_soon">Feature Coming Soon</string>
    <string name="logout">Logout</string>
    <string name="enter_email_hint">Enter Email</string>
    <string name="email">Email</string>
    <string name="enter_surname_hint">Enter surname</string>
    <string name="surname">Surname</string>
    <string name="enter_name_hint">Enter first name</string>
    <string name="firstname_hint">First Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="dash_logo">Dash Logo</string>
    <string name="password">Password</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="terms_conditions_text">By clicking continue, you are thereby agreeing to terms sand conditions specified</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="agree">Agree</string>
    <string name="submit">Submit</string>
    <string name="dash_icon">Dash Icon</string>
    <string name="actual_ts_and_cs">bler bler legal stuff. Please Don\'t Sue me…</string>


</resources>
