<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:paddingHorizontal="30dp" android:layout_marginVertical="20dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.track.TrackFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        >
        <Chronometer
            android:id="@+id/stopWatch"
            android:layout_marginVertical="20dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/black_rectangle"
            android:fontFamily="@font/montserrat"
            android:paddingHorizontal="10dp"
            android:text="@string/defaultTime"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TableRow
            android:id="@+id/StatLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/DistanceLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/distance"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginEnd="30dp"/>

            <TextView
                android:id="@+id/ElevationLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/montserrat"
                android:text="@string/elavation"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:id="@+id/Stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:gravity="center_horizontal">
            <TextView
                android:textAlignment="center"
                android:id="@+id/Distance"
                android:fontFamily="@font/montserrat"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/charDash"
                android:background="@drawable/black_rectangle"
                android:layout_marginEnd="30dp"/>


            <TextView
                android:textAlignment="center"
                android:id="@+id/Elevation"
                android:fontFamily="@font/montserrat"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/charDash"

            android:background="@drawable/black_rectangle"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:baselineAligned="false"

        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trackLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:text="@string/track"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_play"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_play" />
    </LinearLayout>





</RelativeLayout>